# Image-compression

./: Cargo.toml  LICENSE  readme.md
src/: cli.rs  compressor.rs  main.rs  utils.rs
