[package]
name = "image_compressor_cli"
version = "0.1.0"
edition = "2021"
authors = ["Saurabh saurabh10102@gmail.com"]
description = "A CLI tool for compressing images in a directory"

[dependencies]
image = "0.24"
walkdir = "2.3"
clap = { version = "4.0", features = ["derive"] }
indicatif = "0.17"
oxipng = "8.0"
log = "0.4"
env_logger = "0.10"
rayon = "1.5"
